--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^12.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-speech": "^1.0.2",
+    "react-speech-kit": "^3.0.1",
+    "react-widgets": "^4.6.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
