--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-speech-kit": "^3.0.1",
     "react-widgets": "^4.6.1",
     "remove-accents": "^0.4.2",
+    "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
