--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 REACT_APP_API_URL="http://138.68.113.166:8080"
 REACT_APP_API_URL="http://localhost:9001"
+REACT_APP_API_URL="http://192.168.86.88:9001"
