--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-speech": "^1.0.2",
-    "react-speech-kit": "^3.0.1",
     "react-widgets": "^4.6.1",
     "remove-accents": "^0.4.2",
+    "speak-tts": "^2.0.8",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
