--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-widgets": "^4.6.1",
     "remove-accents": "^0.4.2",
     "speak-tts": "^2.0.8",
+    "styled-components": "^5.2.1",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
