--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/core": "^0.67.0",
+    "@nivo/line": "^0.67.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
@@ -10,6 +12,7 @@
     "email-validator": "^2.0.4",
     "linked-list": "^2.1.0",
     "moment": "^2.29.1",
+    "nivo": "^0.31.0",
     "react": "^17.0.1",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-click-outside-hook": "^1.1.1",
