--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "cross-fetch": "^3.0.6",
+    "date-fns": "^2.19.0",
     "email-validator": "^2.0.4",
     "linked-list": "^2.1.0",
     "moment": "^2.29.1",
