The list of classes is rendering correctly...

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.1",
     "cross-fetch": "^3.0.6",
     "email-validator": "^2.0.4",
     "linked-list": "^2.1.0",
@@ -19,6 +20,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-toastify": "^7.0.3",
     "react-widgets": "^4.6.1",
     "remove-accents": "^0.4.2",
     "speak-tts": "^2.0.8",
