--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.1",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-click-outside-hook": "^1.1.1",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
