--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@reach/dialog": "^0.15.0",
+    "@reach/listbox": "^0.15.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
@@ -17,6 +19,7 @@
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-click-outside-hook": "^1.1.1",
     "react-dom": "^17.0.1",
+    "react-epic-spinners": "^0.5.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
