--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-click-outside-hook": "^1.1.1",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^4.0.0",
+    "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-widgets": "^4.6.1",
