Tooltip further on it's way - still inline styling

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@reach/accordion": "^0.15.1",
     "@reach/dialog": "^0.15.0",
     "@reach/listbox": "^0.15.0",
+    "@reach/tooltip": "^0.15.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
