--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "simple-zeeguu",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
