--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,23 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+  "name": "My Second Extension",
+  "description": "This is a Wicked Cool Extension!",
+  "version": "1.0",
+  "manifest_version": 3,
+    "permissions": ["storage", "activeTab", "scripting", "tabs"],
+    "action": {
+      "default_popup": "index.html",
+      "default_title": "Open the popup",
+      "default_icon": {
+        "16": "/images/zeeguu16.png",
+        "32": "/images/zeeguu32.png",
+        "48": "/images/zeeguu48.png",
+        "128": "/images/zeeguu128.png"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  },
+    "icons": {
+      "16": "/images/zeeguu16.png",
+      "32": "/images/zeeguu32.png",
+      "48": "/images/zeeguu48.png",
+      "128": "/images/zeeguu128.png"
+    }
 }
