--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "html-react-parser": "^1.4.8",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-scripts": "5.0.0",
     "rimraf": "^3.0.2",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4",
     "webpack-cli": "^4.9.2"
   },
@@ -43,6 +46,13 @@
     ]
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.178"
+    "@babel/preset-env": "^7.16.11",
+    "@types/chrome": "^0.0.178",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "webpack": "^5.68.0",
+    "wepack-cli": "0.0.1-security"
   }
 }
