--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-scripts": "5.0.0",
     "rimraf": "^3.0.2",
     "web-vitals": "^2.1.4",
