--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "dompurify": "^2.3.5",
     "html-react-parser": "^1.4.8",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
