--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
+    "cross-fetch": "^3.1.5",
     "dompurify": "^2.3.5",
     "html-react-parser": "^1.4.8",
     "npm-run-all": "^4.1.5",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
