--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "cross-fetch": "^3.1.5",
     "dompurify": "^2.3.5",
     "html-react-parser": "^1.4.8",
+    "i": "^0.3.7",
+    "linked-list": "^3.0.2",
+    "npm": "^8.5.1",
     "npm-run-all": "^4.1.5",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
+    "react-click-outside-hook": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-scripts": "5.0.0",
     "rimraf": "^3.0.2",
+    "speak-tts": "^2.0.8",
     "styled-components": "^5.3.3",
+    "use-click-outside": "^2.0.0",
     "web-vitals": "^2.1.4",
     "webpack-cli": "^4.9.2"
   },
