--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "babel-loader": "^8.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "svg-inline-loader": "^0.8.2",
     "webpack": "^5.68.0",
     "wepack-cli": "0.0.1-security"
   }
