--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html-react-parser": "^1.4.8",
     "i": "^0.3.7",
     "linked-list": "^3.0.2",
+    "localized-strings": "^0.2.4",
     "npm": "^8.5.1",
     "npm-run-all": "^4.1.5",
     "qs": "^6.10.3",
