--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "My Second Extension",
+  "name": "Zeeguu Extension",
   "description": "This is a Wicked Cool Extension!",
   "version": "1.0",
   "manifest_version": 3,
