Send email with feedback

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.17.2",
+    "@emailjs/browser": "^3.4.0",
     "@mozilla/readability": "^0.4.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
