Get sessionId from cookie

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,9 @@
   "description": "This is a Wicked Cool Extension!",
   "version": "1.0",
   "manifest_version": 3,
-    "permissions": ["storage", "activeTab", "scripting", "tabs"],
+    "host_permissions": [ "*://www.zeeguu.org/" ],
+    "permissions": ["storage", "activeTab", "scripting", "tabs", "cookies"],
+    
     "action": {
       "default_popup": "index.html",
       "default_title": "Open the popup",
