--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.19.0",
     "email-validator": "^2.0.4",
+    "js-cookie": "^3.0.1",
     "linked-list": "^3.0.1",
     "localized-strings": "^0.2.4",
     "moment": "^2.29.1",
