Working Messages to zeeguu.org

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "description": "This is a Wicked Cool Extension!",
   "version": "1.0",
   "manifest_version": 3,
-    "permissions": ["storage", "activeTab", "scripting", "tabs"],
+    "permissions": ["storage", "activeTab", "scripting", "tabs", "*://localhost/*"],
     "action": {
       "default_popup": "index.html",
       "default_title": "Open the popup",
@@ -13,6 +13,13 @@
         "48": "/images/zeeguu48.png",
         "128": "/images/zeeguu128.png"
     }
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "externally_connectable": {
+    "matches": ["*://localhost/*"],
+    "ids": ["ghnfbnnmkbhhbcionebpncddbpflehmp"]
   },
     "icons": {
       "16": "/images/zeeguu16.png",
