--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "description": "This is a Wicked Cool Extension!",
   "version": "1.0",
   "manifest_version": 3,
-    "permissions": ["storage", "activeTab", "scripting", "tabs", "*://localhost/*"],
+    "permissions": ["storage", "activeTab", "scripting", "tabs"],
     "action": {
       "default_popup": "index.html",
       "default_title": "Open the popup",
