--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "description": "This is a Wicked Cool Extension!",
   "version": "1.0",
   "manifest_version": 3,
-    "host_permissions": [ "*://www.zeeguu.org/", "*://zeeguu.org/" ],
+    "host_permissions": [ "*://www.zeeguu.org/", "*://localhost/3000/" ],
     "permissions": ["storage", "activeTab", "scripting", "tabs", "cookies"],
     
     "action": {
