--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,23 @@
 {
   "name": "The Zeeguu Reader",
   "description": "The extension helps you read articles in the language that you want to practice and offers one-click translation and pronunciation.",
-  "version": "2.0",
+  "version": "2.0.1",
   "manifest_version": 3,
-    "host_permissions": [ "*://www.zeeguu.org/", "*://localhost/3000/",  "https://api.zeeguu.org/" ],
-    "permissions": ["storage", "activeTab", "scripting", "tabs", "cookies"],
-    
-    "action": {
-      "default_popup": "index.html",
-      "default_title": "Open the popup",
-      "default_icon": {
-        "16": "/images/zeeguu16.png",
-        "32": "/images/zeeguu32.png",
-        "48": "/images/zeeguu48.png",
-        "128": "/images/zeeguu128.png"
+  "host_permissions": [
+    "*://www.zeeguu.org/",
+    "*://localhost/3000/",
+    "https://api.zeeguu.org/"
+  ],
+  "permissions": ["storage", "activeTab", "scripting", "tabs", "cookies"],
+
+  "action": {
+    "default_popup": "index.html",
+    "default_title": "Open the popup",
+    "default_icon": {
+      "16": "/images/zeeguu16.png",
+      "32": "/images/zeeguu32.png",
+      "48": "/images/zeeguu48.png",
+      "128": "/images/zeeguu128.png"
     }
   },
   "background": {
@@ -22,13 +26,25 @@
   "externally_connectable": {
     "matches": ["*://localhost/*", "*://*.zeeguu.org/*", "*://www.zeeguu.org/*"]
   },
-    "icons": {
-      "16": "/images/zeeguu16.png",
-      "32": "/images/zeeguu32.png",
-      "48": "/images/zeeguu48.png",
-      "128": "/images/zeeguu128.png"
-    },
-    "web_accessible_resources": [{
-      "resources": ["images/translate.svg", "images/sound.svg", "images/zeeguuLogo.svg", "https://zeeguu.org/static/images/trash.svg", "https://zeeguu.org//static/images/yellow_star", "https://zeeguu.org/static/images/file_rename_orange_36dp.svg", "https://zeeguu.org/static/images/volume_up.svg", "https://zeeguu.org/static/images/thumb_down_black_18dp.svg"],
-      "matches": ["<all_urls>"]}]
+  "icons": {
+    "16": "/images/zeeguu16.png",
+    "32": "/images/zeeguu32.png",
+    "48": "/images/zeeguu48.png",
+    "128": "/images/zeeguu128.png"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "images/translate.svg",
+        "images/sound.svg",
+        "images/zeeguuLogo.svg",
+        "https://zeeguu.org/static/images/trash.svg",
+        "https://zeeguu.org//static/images/yellow_star",
+        "https://zeeguu.org/static/images/file_rename_orange_36dp.svg",
+        "https://zeeguu.org/static/images/volume_up.svg",
+        "https://zeeguu.org/static/images/thumb_down_black_18dp.svg"
+      ],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
