--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "build:bg": "webpack --mode production ./src/JSInjection/main.js --output-path ./build/",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "publish": "rm -rf build* && npm-run-all build:* && zip -r build.zip build && open https://chrome.google.com/webstore/devconsole/"
+    "pub": "rm -rf build* && npm-run-all build:* && zip -r build.zip build && open https://chrome.google.com/webstore/devconsole/7f6da896-c12c-4cb3-8ad7-b1641fc8efbc/ckncjmaednfephhbpeookmknhmjjodcd/edit/package"
   },
   "eslintConfig": {
     "extends": [
