automate changing the manifest chrome and firefox

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "start": "react-scripts start",
     "prebuild": "rimraf build",
     "build": "npm-run-all build:*",
+    "copyChrome": "cp ./public/manifest.chrome.json ./public/manifest.json",
+    "copyFirefox": "cp ./public/manifest.firefox.json ./public/manifest.json",
     "build:app": "INLINE_RUNTIME_CHUNK=false DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "build:bg": "webpack --mode production ./src/JSInjection/main.js --output-path ./build/",
     "test": "react-scripts test",
