--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -20,7 +20,7 @@
     },
     "content_scripts": [
       {
-       "matches": ["http://localhost/*", "*://*.zeeguu.org/*"],
+       "matches": ["*://*.zeeguu.org/*"],
        "js": ["contentScript.js"]
       }
     ],
