--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "build:bg": "webpack --mode production ./src/JSInjection/main.js --output-path ./build/",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "pub": "rm -rf build* && (cd src/zeeguu-react/ && git pull) && npm-run-all build:* && zip -r build.zip build && open https://chrome.google.com/webstore/devconsole/7f6da896-c12c-4cb3-8ad7-b1641fc8efbc/ckncjmaednfephhbpeookmknhmjjodcd/edit/package"
+    "pub": "rm -rf build* && (cd src/zeeguu-react/ && git pull) && npm-run-all build:* && zip -r build.zip build && open https://chrome.google.com/webstore/devconsole/7f6da896-c12c-4cb3-8ad7-b1641fc8efbc/ckncjmaednfephhbpeookmknhmjjodcd/edit/package",
+    "pub-ci": "cd src && git clone https://github.com/zeeguu-ecosystem/zeeguu-react.git && npm-run-all build:* && zip -r build.zip build"
   },
   "eslintConfig": {
     "extends": [
