--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@reach/listbox": "^0.15.0",
     "@reach/tooltip": "^0.15.0",
     "axios": "^0.21.1",
+    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
+    "cross-env": "^7.0.3",
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.19.0",
     "email-validator": "^2.0.4",
@@ -40,8 +42,7 @@
     "speak-tts": "^2.0.8",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.1",
-    "web-vitals": "^2.1.0",
-    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
