--- a/.github/workflows/firefox.yml
+++ b/.github/workflows/firefox.yml
@@ -27,8 +27,8 @@ jobs:
           cmd: sign
           source: ${{ steps.web-ext-build.outputs.target }}
           channel: listed
-          apiKey: ${{ FIREFOX_API_KEY }}
-          apiSecret: ${{ FIREFOX_API_SECRET }}
+          apiKey: ${{ secrets.FIREFOX_API_KEY }}
+          apiSecret: ${{ secrets.FIREFOX_API_SECRET }}
           timeout: 900000
 
       - name: "Create Release"
