--- a/.github/workflows/firefox.yml
+++ b/.github/workflows/firefox.yml
@@ -6,18 +6,29 @@ on:
       - FirefoxPublishing
 
 jobs:
+  build:
+    name: Publish to Chrome store
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 16
+    - name: Build
+      run: |
+        npm install
+        npm run pub-ci-firefox
   sign:
     name: "Release"
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
         uses: actions/checkout@v1
-
       - name: "web-ext build"
         id: web-ext-build
         uses: kewisch/action-web-ext@v1
         with:
-          cmd: buildFirefox
+          cmd: build
           source: .
 
       - name: "web-ext sign"
