--- a/.github/workflows/firefox.yml
+++ b/.github/workflows/firefox.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Publish to Chrome store
+    name: Publish to Firefox store
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
@@ -30,7 +30,7 @@ jobs:
         uses: kewisch/action-web-ext@v1
         with:
           cmd: build
-          source: ./build
+          source: ./
 
       - name: "web-ext sign"
         id: web-ext-sign
