--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@reach/listbox": "^0.15.0",
     "@reach/tooltip": "^0.15.0",
     "axios": "^0.21.1",
-    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
     "cross-env": "^7.0.3",
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.19.0",
@@ -46,9 +45,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build"
   },
   "eslintConfig": {
     "extends": [
