--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
+    "installZeeguu": "cd src/zeeguu-react/ && npm install",
     "start": "react-scripts start",
     "prebuild": "rimraf build",
     "build": "npm-run-all build:*",
