--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
-    "installZeeguu": "cd src/zeeguu-react/ && npm install",
+    "importZeeguu": "cd src && git clone -b development https://github.com/zeeguu-ecosystem/zeeguu-react.git && cd zeeguu-react/ && npm install",
     "start": "react-scripts start",
     "prebuild": "rimraf build",
     "build": "cp ./public/manifest.chrome.json ./public/manifest.json && npm-run-all build:*",
