--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -15,6 +15,7 @@
     "activeTab",
     "tabs",
     "cookies",
+    "tts",
     "https://www.zeeguu.org/",
     "https://api.zeeguu.org/",
     "<all_urls>"
