--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -36,7 +36,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.zeeguu.org/*"],
-      "js": ["contentScript.js"]
+      "js": ["zeeguuOrgContentScript.js"]
     }
   ],
   "icons": {
