--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-react-require": "^3.1.3"
+    "babel-plugin-react-require": "^3.1.3",
+    "prettier": "2.8.3"
   }
 }
