--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-scripts": "^5.0.0",
     "remove-accents": "^0.4.2",
     "styled-components": "^5.2.1",
-    "uuid": "^8.3.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -67,7 +67,8 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-react-require": "^3.1.3"
+    "babel-plugin-react-require": "^3.1.3",
+    "@babel/plugin-proposal-private-property-in-object":"^7.21.11"
   },
   "overrides": {
     "d3-color":"3.1.0",
