--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "react-toastify": "^9.1.3",
     "remove-accents": "^0.4.2",
     "styled-components": "^5.2.1",
     "uuid": "^9.0.0",
@@ -67,11 +68,11 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-react-require": "^3.1.3",
-    "@babel/plugin-proposal-private-property-in-object":"^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "babel-plugin-react-require": "^3.1.3"
   },
   "overrides": {
-    "d3-color":"3.1.0",
-    "nth-check":"2.1.1"
+    "d3-color": "3.1.0",
+    "nth-check": "2.1.1"
   }
 }
