--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reach/dialog": "^0.15.0",
     "@reach/listbox": "^0.15.0",
     "@reach/tooltip": "^0.15.0",
+    "@sentry/react": "^7.74.1",
     "axios": "^1.4.0",
     "cross-env": "^7.0.3",
     "cross-fetch": "^3.0.6",
@@ -48,7 +49,8 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build"
+    "build": "cross-env react-scripts build && npm run sentry:sourcemaps",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org it-university-of-copenhagen --project zeeguu-web ./build && sentry-cli sourcemaps upload --org it-university-of-copenhagen --project zeeguu-web ./build"
   },
   "eslintConfig": {
     "extends": [
