--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reach/dialog": "^0.15.0",
     "@reach/listbox": "^0.15.0",
     "@reach/tooltip": "^0.15.0",
+    "@sentry/cli": "^2.21.2",
     "@sentry/react": "^7.74.1",
     "axios": "^1.4.0",
     "cross-env": "^7.0.3",
@@ -50,7 +51,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build": "cross-env react-scripts build || npm run sentry:sourcemaps",
-    "sentry:sourcemaps": "./node_modules/.bin/sentry-cli sourcemaps inject --org it-university-of-copenhagen --project zeeguu-web ./build && sentry-cli sourcemaps upload --org it-university-of-copenhagen --project zeeguu-web ./build"
+    "sentry:sourcemaps": "./node_modules/.bin/sentry-cli sourcemaps inject --org it-university-of-copenhagen --project zeeguu-web ./build && ./node_modules/.bin/sentry-cli sourcemaps upload --org it-university-of-copenhagen --project zeeguu-web ./build"
   },
   "eslintConfig": {
     "extends": [
