--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "remove-accents": "^0.4.2",
     "styled-components": "^5.2.1",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "js-levenshtein": "1.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
