--- a/package.json
+++ b/package.json
@@ -45,7 +45,13 @@
     "styled-components": "^5.2.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
-    "fast-levenshtein": "3.0.0"
+    "fast-levenshtein": "3.0.0",
+    "npm-run-all": "^4.1.5",
+    "@mozilla/readability": "^0.4.1",
+    "webpack-cli": "^4.9.2",
+    "react-modal": "^3.14.4",
+    "dompurify": "^2.3.5"
+
   },
   "scripts": {
     "start": "react-scripts start",
