removing duplication between package.json in web and extension

--- a/package.json
+++ b/package.json
@@ -3,42 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.17.2",
-    "@emailjs/browser": "^3.4.0",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@mozilla/readability": "^0.4.1",
-    "@mui/icons-material": "^5.0.1",
-    "@mui/material": "^5.0.1",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.0",
-    "cross-fetch": "^3.1.5",
-    "dompurify": "^2.3.5",
-    "emailjs": "^3.8.0",
-    "html-react-parser": "^1.4.8",
-    "i": "^0.3.7",
-    "linked-list": "^3.0.2",
-    "localized-strings": "^0.2.4",
-    "npm": "^8.5.1",
-    "npm-run-all": "^4.1.5",
-    "qs": "^6.10.3",
-    "query-string": "^7.1.1",
-    "react": "^17.0.2",
-    "react-click-outside-hook": "^1.1.1",
-    "react-dom": "^17.0.2",
-    "react-modal": "^3.14.4",
-    "react-scripts": "5.0.0",
-    "rimraf": "^3.0.2",
-    "styled-components": "^5.3.3",
-    "use-click-outside": "^2.0.0",
-    "web-vitals": "^2.1.4",
-    "webpack-cli": "^4.9.2"
+    "ref_name": "file:src/zeeguu-react/"
   },
   "scripts": {
     "updateZeeguuReact": "git submodule update --remote --merge && (cd src/zeeguu-react/ && npm install)",
-    "installAllDependencies": "npm install && cd zeeguu-react/ && npm install",
+    "installDeps": "(cd src/zeeguu-react/ && npm install) && ln -s src/zeeguu-react/node_modules .",
     "start": "react-scripts start",
     "prebuild": "rimraf build",
     "build": "cp ./public/manifest.chrome.json ./public/manifest.json && npm-run-all build:*",
