Added support to build Extension in windows
+ Fixed some compiling errors

--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   },
   "scripts": {
     "updateZeeguuReact": "git submodule update --remote --merge && (cd src/zeeguu-react/ && npm install)",
+    "installDepsWindows": "cd .\\src\\zeeguu-react && npm install && cd ..\\..\\. && mklink /d .\\node_modules .\\src\\zeeguu-react\\node_modules",
     "installDeps": "(cd src/zeeguu-react/ && npm install) && ln -s src/zeeguu-react/node_modules .",
     "start": "react-scripts start",
     "prebuild": "rimraf build",
-    "build": "cp ./public/manifest.chrome.json ./public/manifest.json && npm-run-all build:*",
-    "build:popup": "INLINE_RUNTIME_CHUNK=false DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "build": "cp ./public/manifest.chrome.json ./public/manifest.json && npm-run-all buildUnix:* && npm-run-all build:*",
+    "buildWindows": "copy .\\public\\manifest.chrome.json .\\public\\manifest.json && npm-run-all buildWindows:* && npm-run-all build:*",
+    "buildUnix:popup": "INLINE_RUNTIME_CHUNK=false DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "buildWindows:popup": "SET INLINE_RUNTIME_CHUNK=false && SET DISABLE_ESLINT_PLUGIN=true && react-scripts build",
     "build:content": "webpack --mode production ./src/JSInjection/main.js --output-path ./build/",
     "build:bg": "webpack --mode production ./src/background/background.js --output-path ./build/ --output-filename background.js",
     "build:izo": "webpack --mode production ./src/injectOnZeeguuOrg/injectOnZeeguuOrg.js --output-path ./build/ --output-filename injectOnZeeguuOrg.js",
