--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "babel-plugin-react-require": "^3.1.3"
+    "babel-plugin-react-require": "^3.1.3",
+    "prettier": "3.2.5"
   },
   "overrides": {
     "d3-color": "3.1.0",
