--- a/package.json
+++ b/package.json
@@ -81,6 +81,17 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "babel-plugin-react-require": "^3.1.3",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@types/chrome": "^0.0.178",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "ref_name": "file:src/zeeguu-react/",
+    "svg-inline-loader": "^0.8.2",
+    "webpack": "^5.76.0",
+    "wepack-cli": "0.0.1-security",
     "prettier": "3.2.5"
   },
   "overrides": {
