--- a/.env.development.default
+++ b/.env.development.default
@@ -1,4 +1,4 @@
-REACT_APP_API_URL="https://api.zeeguu.org/"
+REACT_APP_API_URL="http://localhost:9001/"
 REACT_APP_EXTENSION_ID="ckncjmaednfephhbpeookmknhmjjodcd"
 
 #https://stackoverflow.com/a/70834076
